profile: fixed content title spacing

--- a/client/landing/stylus/app.user.styl
+++ b/client/landing/stylus/app.user.styl
@@ -543,6 +543,7 @@ textarea.profile-handle-customize.kdinput
         color               #444
         font-size           32px
         width               auto
+        line-height         100%
         // margin-top          -7px
         vendor transition,  color .1s linear
         a
